--- a/public/styles.css
+++ b/public/styles.css
@@ -55,6 +55,7 @@ body {
     text-align: left;
     color: white;
     padding: 12px 0 20px !important;
+    transition: 2s;
 }
 
 .circle-wrapper {
